--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     kapt 'androidx.lifecycle:lifecycle-compiler:2.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.arch.core:core-testing:2.0.1'
+    testImplementation 'android.arch.core:core-testing:1.0.0-alpha3'
     androidTestImplementation "com.nhaarman:mockito-kotlin:1.5.0"
     androidTestImplementation "org.mockito:mockito-android:2.25.1"
     androidTestImplementation 'androidx.test:runner:1.2.0'
