--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,4 +67,5 @@ dependencies {
     implementation 'androidx.room:room-runtime:2.0.0'
     annotationProcessor 'androidx.room:room-compiler:2.0.0'
     implementation 'com.mikhaellopez:circularimageview:3.2.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
 }
