--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ matrix:
         - echo y | android update sdk -a --no-ui --filter sys-img-armeabi-v7a-android-24
         - android list targets | grep -E '^id:' | awk -F '"' '{$1=""; print $2}' # list all targets
         - echo no | android create avd --force -n test -t android-24 --abi armeabi-v7a
-        - emulator -avd test -no-skin -no-window &
+        #- emulator -avd test -no-skin -no-window &
         - android-wait-for-emulator
         - adb shell input keyevent 82 &
         - adb wait-for-device get-serialno
