--- a/.travis.yml
+++ b/.travis.yml
@@ -1,60 +1,61 @@
-language: java
+language: android
 sudo: required
-
-matrix:
-  include:
-    #- language: java
-    # install: true
-    #os: osx
-    #osx_image: xcode9.3
-    #before_install:
-    #  - brew update
-    # - brew outdated xctool || brew upgrade xctool
-    #- npm install -g appium
-    #script:
-    # - ./gradlew clean build xcuiTest -x test -x signArchives
-
-    - language: android
-      #install: true
-      install:
-        - echo y | android update sdk -u -a -t tools
-        - echo y | android update sdk -u -a -t platform-tools
-        - echo y | android update sdk -u -a -t build-tools-28.0.3
-        - echo y | android update sdk -u -a -t android-28
-        - echo y | android update sdk -u -a -t extra-google-m2repository
-        - echo y | android update sdk -u -a -t extra-android-m2repository
-      os: linux
-      jdk: oraclejdk8
-      android:
-        components:
-          - extra-android-support
-          - sys-img-armeabi-v7a-android-24
-      before_install:
-        - curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.1/install.sh | bash
-        - nvm install 8
-        - node --version
-        - npm --version
-        - npm install -g appium
-        - echo y | android update sdk -a --no-ui --filter android-24
-        - echo y | android update sdk -a --no-ui --filter sys-img-armeabi-v7a-android-24
-        - android list targets | grep -E '^id:' | awk -F '"' '{$1=""; print $2}' # list all targets
-        - echo no | android create avd --force -n test -t android-24 --abi armeabi-v7a
-        #- emulator -avd test -no-skin -no-window &
-        - android-wait-for-emulator
-        - adb shell input keyevent 82 &
-        - adb wait-for-device get-serialno
-        - sleep 100
-        - chmod +x gradlew
-        - ./gradlew --version
-        - echo y |adb devices
-
-        #script:
-        - ./gradlew clean build uiAutomationTest -x test -x signArchives
+jdk: oraclejdk8
 
 before_cache:
-  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
   - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+
 cache:
   directories:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
+
+env:
+  global:
+    - ANDROID_API=28
+    - EMULATOR_API=26
+    - ANDROID_BUILD_TOOLS=28
+    - ADB_INSTALL_TIMEOUT=5 # minutes
+    -
+android:
+  components:
+    - tools
+    - platform-tools
+    - build-tools-$ANDROID_BUILD_TOOLS
+    - android-$ANDROID_API
+    - android-$EMULATOR_API_LEVEL
+    - extra-google-m2repository
+    - extra-android-m2repository # for design library
+    - addon-google_apis-google-19 # google play services
+    - sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API_LEVEL
+    - sys-img-armeabi-v7a-addon-google_apis-google-$EMULATOR_API_LEVEL
+
+  licenses:
+    - android-sdk-preview-license-.+
+    - android-sdk-license-.+
+    - google-gdk-license-.+
+
+before_install:
+  - curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.1/install.sh | bash
+  - nvm install 8
+  - node --version
+  - npm --version
+  - npm install -g appium
+  - echo y | android update sdk -a --no-ui --filter android-26
+  - echo y | android update sdk -a --no-ui --filter sys-img-armeabi-v7a-android-26
+  - android list targets | grep -E '^id:' | awk -F '"' '{$1=""; print $2}' # list all targets
+  - echo no | android create avd --force -n test -t android-24 --abi armeabi-v7a
+  #- emulator -avd test -no-skin -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
+  - adb wait-for-device get-serialno
+  - sleep 100
+  - chmod +x gradlew
+  - ./gradlew --version
+  - echo y |adb devices
+  #script:
+  #- ./gradlew clean build uiAutomationTest -x test -x signArchives
+
+script:
+- ./gradlew clean test build
