--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,10 @@ android {
     lintOptions {
         abortOnError false
     }
+
+    dataBinding{
+        enabled = true
+    }
 }
 
 dependencies {
@@ -71,4 +75,5 @@ dependencies {
     annotationProcessor 'androidx.room:room-compiler:2.0.0'
     implementation 'com.mikhaellopez:circularimageview:3.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'com.google.android.gms:play-services-maps:16.1.0'
 }
