--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,28 +3,30 @@ jobs:
   build:
     working_directory: ~/code
     docker:
-      - image: circleci/android:api-25-alpha
+      - image: circleci/android:api-28-alpha
     environment:
-      JVM_OPTS: -Xmx3200m
+      JVM_OPTS: -Xmx4096m
     steps:
       - checkout
       - restore_cache:
-          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
-      #      - run:
-      #         name: Chmod permissions #if permission for Gradlew Dependencies fail, use this.
-      #         command: sudo chmod +x ./gradlew
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "testing-ktx/build.gradle" }}
       - run:
-          name: Download Dependencies
+          name: Get Dependencies
           command: ./gradlew androidDependencies
       - save_cache:
           paths:
             - ~/.gradle
-          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "testing-ktx/build.gradle" }}
       - run:
           name: Run Tests
           command: ./gradlew lint test
       - store_artifacts:
-          path: app/build/reports
-          destination: reports
+          path: testing/build/reports
+          destination: testing/reports
+      - store_artifacts:
+          path: testing-ktx/build/reports
+          destination: testing-ktx/reports
       - store_test_results:
-          path: app/build/test-results
+          path: testing/build/test-results
+      - store_test_results:
+          path: testing-ktx/build/test-results
