--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2
 jobs:
   build:
-    working_directory: ~/code
+    working_directory: ~/
     docker:
       - image: circleci/android:api-28-alpha
     environment:
@@ -9,7 +9,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "testing-ktx/build.gradle" }}
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
       - run:
           name: Chmod permissions #if permission for Gradlew Dependencies fail, use this.
           command: sudo chmod +x ./gradlew
@@ -19,7 +19,7 @@ jobs:
       - save_cache:
           paths:
             - ~/.gradle
-          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "testing-ktx/build.gradle" }}
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
       - run:
           name: Run Tests
           command: ./gradlew lint test
@@ -27,9 +27,9 @@ jobs:
           path: testing/build/reports
           destination: testing/reports
       - store_artifacts:
-          path: testing-ktx/build/reports
-          destination: testing-ktx/reports
+          path: app/build/reports
+          destination: app/reports
       - store_test_results:
           path: testing/build/test-results
       - store_test_results:
-          path: testing-ktx/build/test-results
+          path: app/build/test-results
