--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,7 @@ android {
         abortOnError false
     }
 
-    dataBinding{
+    dataBinding {
         enabled = true
     }
 }
@@ -85,4 +85,11 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.2.9'
     /** Animations with Lottie **/
     implementation 'com.airbnb.android:lottie:3.0.6'
+    /** Koin **/
+    // Koin for Android
+    implementation 'org.koin:koin-android:2.0.1'
+    // or Koin for Lifecycle scoping
+    implementation 'org.koin:koin-androidx-scope:2.0.1'
+    // or Koin for Android Architecture ViewModel
+    implementation 'org.koin:koin-androidx-viewmodel:2.0.1'
 }
