--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
           xmlns:tools="http://schemas.android.com/tools" package="com.simplekjl.tddkt">
     <uses-permission android:name="android.permission.INTERNET"/>
     <application
+            android:name=".di.TDDKTApp"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
