--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,9 @@ jobs:
       - image: circleci/android:api-28-alpha
     environment:
       JVM_OPTS: -Xmx4096m
+      dependencies:
+      override:
+        echo y | android update sdk --no-ui --all --filter "platform-tools, tools"
     steps:
       - checkout
       - restore_cache:
@@ -22,7 +25,7 @@ jobs:
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
       - run:
           name: Run Tests
-          command: ./gradlew test
+          command: ./gradlew lint test
       - store_artifacts:
           path: testing/build/reports
           destination: testing/reports
