--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,8 @@ jobs:
       dependencies:
       override:
         echo y | android update sdk --no-ui --all --filter "platform-tools, tools"
+        echo y | android update sdk --no-ui --all --filter "android-29, build-tools-29.0.0"
+        echo -e "\nd56f5187479451eabf01fb78af6dfcb131a6481e" > "/opt/android-sdk-linux/licenses/android-sdk-license"
     steps:
       - checkout
       - restore_cache:
