--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,9 @@ jobs:
       - run:
           name: Installing Android 29
           command: echo y | android update sdk --no-ui --all --filter "android-29, build-tools-29.0.0"
+      - run:
+          name: Approve license for build tools
+          command: (echo y; echo y; echo y; echo y; echo y; echo y) | $ANDROID_HOME/tools/bin/sdkmanager --licenses
 #      - run:
 #          name: Making Directory Licenses
 #          command: mkdir "/opt/android-sdk/licenses" || true echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > "/opt/android-sdk/licenses/android-sdk-license"
