--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,11 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
+        debug{
+            buildConfigField("String", "HOST_URL_BASE", "\"https://jsonplaceholder.typicode.com\"")
+        }
         release {
+            buildConfigField("String", "HOST_URL_BASE", "\"https://jsonplaceholder.typicode.com\"")
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
@@ -45,9 +49,6 @@ android {
 }
 
 dependencies {
-    def lifecycle_version = "1.1.1"
-    def room_version = "1.1.1"
-    def nav_version = "2.1.0-alpha04"
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.0.2'
@@ -98,5 +99,6 @@ dependencies {
     // or Koin for Android Architecture ViewModel
     implementation 'org.koin:koin-androidx-viewmodel:2.0.1'
     testImplementation 'org.robolectric:robolectric:4.3'
-
+    /** botom navigation **/
+    implementation "com.google.android.material:material:1.1.0-alpha07"
 }
